new charts applied

--- a/Kuberntes_Resources/Pod-Manifest.yaml
+++ b/Kuberntes_Resources/Pod-Manifest.yaml
@@ -8,9 +8,9 @@ spec:
   containers:  #list
   - name: myapp
     image: stacksimplify/kubenginx:1.0.0
-    # resources:
-    #   limits:
-    #     memory: "128Mi"
-    #     cpu: "500m"
+    resources:
+      requests:  
+        memory: "128Mi"
+        cpu: "500m"
     ports:
       - containerPort: 80
